fixed text on small screens

--- a/source/stylesheets/_queries.css.scss
+++ b/source/stylesheets/_queries.css.scss
@@ -1,8 +1,8 @@
 /* Custom, iPhone Retina */
 @media only screen and (min-width : 320px) {
   .prizing h3{
-    font-size: 20px;
-    line-height: 10px;
+    font-size: 16px;
+    line-height: 0px;
   }
   #ss-form{
     padding: 0 10px;
